working author sort

--- a/public/app/bookDisplay/allBooks.html
+++ b/public/app/bookDisplay/allBooks.html
@@ -6,6 +6,8 @@
 
   <div class="section-divider"></div>
 
+  <bs-sort-options></bs-sort-options>
+
   <bs-display-books></bs-display-books>
 
 </section>
