--- a/public/app/bookDisplay/directive/bsDisplayBooks.html
+++ b/public/app/bookDisplay/directive/bsDisplayBooks.html
@@ -42,6 +42,6 @@
 
   <p class="vert-book-title">{{book.title}}</p>
   <p class="vert-book-author">{{book.author}}</p>
-  <p class="vert-book-owner">Owner: {{book.owner}}</p>
+  <p class="vert-book-owner">Owner: {{book.ownerName}}</p>
 
 </div>
