--- a/public/app/navigation/menu/bsMenu.html
+++ b/public/app/navigation/menu/bsMenu.html
@@ -5,7 +5,10 @@
 
   <ul class="dropdown-menu" uib-dropdown-menu role="menu">
     <li role="menuitem"><a href="/">Home</a></li>
-    <li role="menuitem"><a href="#">Account</a></li>
+    <li role="menuitem"><a href="#">Messages</a></li>
+    <li role="menuitem"><a href="#">My Books</a></li>
+    <li role="menuitem"><a href="#">Profile</a></li>
+    <li role="menuitem"><a href="#">Settings</a></li>
     <li role="menuitem"><a href="#">Create Invite</a></li>
     <li class="divider"></li>
     <li role="menuitem"><a href="/login" ng-hide='login.sessionToken'>Log In</a></li>
