--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -1,20 +1,21 @@
-<section class="home-body">
 
-  <div class="home-title-section">
-  <bs-navigation></bs-navigation>
-    <h1>Welcome to the Book Share!</h1>
+<section class="home-bg">
 
-    <a ng-href="/login">
-      <div class="log-in-btn">
-        Log In
-      </div>
-    </a>
+<section class="home-nav">
+  <a href='/' class="home-nav-logo">Bookshare</a>
+  <a href="/login" class="home-sign-in">Sign in</a>
+</section>
 
-    <a ng-href="/register">
-      <div class="sign-up-btn">
-        Sign Up
-      </div>
-    </a>
+
+
+  <div class="home-container">
+    <img src="../img/home-library-example.jpg" style="float: left; width: 50%;" />
+
+    <div>
+      <h1>Share, Borrow, Read! </h1>
+      <p>Bookshare lets you loan or borrow books from friends, coworkers or any community. </p>
+      <bs-register></bs-register>
+    </div>
 
   </div>
 
