--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <script src="app/account/account.controller.js"></script>
   <script src="app/bookDisplay/displayBooks.controller.js"></script>
   <script src="app/authorization/register/register.controller.js"></script>
+  <script src="app/authorization/register/bsRegister.js"></script>
   <script src="app/authorization/login/login.controller.js"></script>
   <script src="app/navigation/nav.controller.js"></script>
   <script src="app/navigation/bsNavigation.js"></script>
