--- a/public/app/authorization/register/register.view.html
+++ b/public/app/authorization/register/register.view.html
@@ -1,15 +1,15 @@
 <form ng-submit="register.onSubmit()">
   <div>
-    <label for="name">Full name</label>
+    <!--<label for="name">Full name</label>-->
     <input type="text"id="name" placeholder="Enter your name" ng-model="register.credentials.name">
   </div>
   <div>
-    <label for="email">Email address</label>
+    <!--<label for="email">Email address</label>-->
     <input type="email" id="email" placeholder="Enter email" ng-model="register.credentials.email">
   </div>
   <div>
-    <label for="password">Password</label>
+    <!--<label for="password">Password</label>-->
     <input type="password" id="password" placeholder="Password" ng-model="register.credentials.password">
   </div>
-  <button type="submit">Register!</button>
+  <button type="submit">Sign up for free</button>
 </form>
