adding more homepage styling

--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -11,8 +11,8 @@
   <div class="home-container">
     <img src="../img/home-library-example.jpg" style="float: left; width: 50%;" />
 
-    <div>
-      <h1>Share, Borrow, Read! </h1>
+    <div class="home-sign-up-container">
+      <h1>Share, Borrow, Read!</h1>
       <p>Bookshare lets you loan or borrow books from friends, coworkers or any community. </p>
       <bs-register></bs-register>
     </div>
