--- a/public/app/authorization/register/register.view.html
+++ b/public/app/authorization/register/register.view.html
@@ -1,15 +1,15 @@
 <form ng-submit="register.onSubmit()">
-  <div>
+  <div class="registration-input-box">
     <!--<label for="name">Full name</label>-->
-    <input type="text"id="name" placeholder="Enter your name" ng-model="register.credentials.name">
+    <input type="text"id="name" placeholder="Full name" ng-model="register.credentials.name">
   </div>
-  <div>
+  <div class="registration-input-box">
     <!--<label for="email">Email address</label>-->
-    <input type="email" id="email" placeholder="Enter email" ng-model="register.credentials.email">
+    <input type="email" id="email" placeholder="Email" ng-model="register.credentials.email">
   </div>
-  <div>
+  <div class="registration-input-box">
     <!--<label for="password">Password</label>-->
     <input type="password" id="password" placeholder="Password" ng-model="register.credentials.password">
   </div>
-  <button type="submit">Sign up for free</button>
+  <button type="submit" class="registration-submit-button">Sign up for free</button>
 </form>
