--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
   <script src="app/bookDisplay/display/bsDisplayBooks.js"></script>
   <script src="app/bookDisplay/search/bsSearchBook.js"></script>
   <script src="app/bookDisplay/search-modal/bookModal.controller.js"></script>
+  <script src="app/authorization/login/loginModal.controller.js"></script>
   <script src="app/bookDisplay/sorting/bsSortOptions.js"></script>
   <script src="app/bookDisplay/sorting/sortOptions.controller.js"></script>
   <script src="app/components/monthly-books/bsMonthlyBooks.js"></script>
