--- a/public/app/authorization/login/login.view.html
+++ b/public/app/authorization/login/login.view.html
@@ -1,14 +1,15 @@
+
 <section class="login-container" ng-controller="LoginController as login">
   <p>Welcome back, log in</p>
   <form ng-submit="login.logUserOn()">
-    <div class="form-group">
+    <div class="login-input-box">
       <!--<label for="email">Email address</label>-->
       <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="login.credentials.email">
     </div>
-    <div class="form-group">
+    <div class="login-input-box">
       <!--<label for="password">Password</label>-->
       <input type="password" class="form-control" id="password" placeholder="Password" ng-model="login.credentials.password">
     </div>
-    <button type="submit" class="btn btn-default" ng-click="modal.signedIn()">Sign in!</button>
+    <button type="submit" class="login-submit-button" ng-click="modal.signedIn()">Sign in!</button>
   </form>
 </section>
