--- a/public/app/authorization/register/register.view.html
+++ b/public/app/authorization/register/register.view.html
@@ -1,4 +1,4 @@
-<form ng-submit="register.onSubmit()">
+<form ng-submit="register.onSubmit()" ng-controller="RegisterController as register">
   <div class="registration-input-box">
     <!--<label for="name">Full name</label>-->
     <input type="text"id="name" placeholder="Full name" ng-model="register.credentials.name">
