--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -1,9 +1,9 @@
 
 <section class="home-bg">
 
-<section class="home-nav" ng-controller="LoginController as login">
+<section class="home-nav" ng-controller="LoginController as login" ng-init="login.checkLoggedIn()">
   <a href='/' class="home-nav-logo">Bookshare</a>
-  <a  ng-click='login.logInPopup()' class="home-sign-in">Sign in</a>
+  <a href="#" class="home-sign-in" ng-click='login.logInPopup()' >Sign in</a>
 </section>
 
   <div class="home-container">
