--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -11,7 +11,7 @@
 
     <div class="home-sign-up-container">
       <h1>Share, Borrow, Read!</h1>
-      <p>Bookshare lets you loan or borrow books from friends, coworkers or any community. </p>
+      <p>Bookshare lets you loan or borrow books with friends, coworkers or any community. </p>
       <bs-register></bs-register>
     </div>
 
