--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style/nav.style.css" type="text/css">
     <link rel="stylesheet" href="style/home.style.css" type="text/css">
     <link rel="stylesheet" href="style/displayBooks.style.css" type="text/css">
+    <link rel="stylesheet" href="style/animation.css" type="text/css">
 </head>
 
 <body ng-app="bookApp">
@@ -49,7 +50,6 @@
   <script src="app/common/services/data.service.js"></script>
   <script src="app/common/services/authentication.service.js"></script>
   <script src="app/common/services/authentication.service.js"></script>
-
 
 </body>
 </html>
