--- a/public/app/bookDisplay/display/bsDisplayBooks.html
+++ b/public/app/bookDisplay/display/bsDisplayBooks.html
@@ -32,7 +32,7 @@
     </div>
 
     <i class="fa fa-times-circle"
-       ng-click='display.deleteBook(book)'
+       ng-click='display.deleteBook(book); display.reloadRoute()'
        ng-show="display.currentPage === '/userBooks'"
        aria-hidden="true"
        alt="Delete"
