--- a/public/app/chat/bsChat.html
+++ b/public/app/chat/bsChat.html
@@ -23,19 +23,8 @@
 
 <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-<script>
+<script src="./chat.js"></script>
 
-  var socket = io();
-  console.log(socket);
-  $('form').submit(function(){
-    socket.emit('chat message', $('#m').val());
-    $('#m').val('');
-    return false;
-  });
-  socket.on('chat message', function(msg){
-    $('#messages').append($('<li>').text(msg));
-  });
-</script>
 
 
 
