--- a/public/app/chat/bsChat.html
+++ b/public/app/chat/bsChat.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Chat</title>
+  <title>Socket.IO chat</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font: 13px Helvetica, Arial; }
@@ -18,16 +18,18 @@
 <form action="">
   <input id="m" autocomplete="off" /><button>Send</button>
 </form>
-
-
-
-<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-<script src="./chat.js"></script>
-
-
-
-
-
+<script>
+  var socket = io();
+  $('form').submit(function(){
+    socket.emit('chat message', $('#m').val());
+    $('#m').val('');
+    return false;
+  });
+  socket.on('chat message', function(msg){
+    $('#messages').append($('<li>').text(msg));
+  });
+</script>
 </body>
 </html>
