--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style/home.style.css" type="text/css">
     <link rel="stylesheet" href="style/displayBooks.style.css" type="text/css">
     <link rel="stylesheet" href="style/animation.css" type="text/css">
+    <link rel="stylesheet" href="style/chat.style.css" type="text/css">
 </head>
 
 <body ng-app="bookApp">
@@ -26,29 +27,47 @@
 
   <!--<script src="js/app.bundle.js"></script>-->
 
+  <!-- Main App -->
   <script src="app/app.js"></script>
+
+  <!-- Account -->
   <script src="app/account/account.controller.js"></script>
-  <script src="app/bookDisplay/displayBooks.controller.js"></script>
+
+  <!-- Authorization -->
   <script src="app/authorization/register/register.controller.js"></script>
   <script src="app/authorization/register/bsRegister.js"></script>
   <script src="app/authorization/login/login.controller.js"></script>
+  <script src="app/authorization/login/loginModal.controller.js"></script>
+
+  <!-- Navigation -->
   <script src="app/navigation/nav.controller.js"></script>
   <script src="app/navigation/bsNavigation.js"></script>
   <script src="app/navigation/menu/bsMenu.js"></script>
+
+  <!-- Book Display -->
+  <script src="app/bookDisplay/displayBooks.controller.js"></script>
   <script src="app/bookDisplay/display/bsDisplayBooks.js"></script>
   <script src="app/bookDisplay/search/bsSearchBook.js"></script>
   <script src="app/bookDisplay/search-modal/bookModal.controller.js"></script>
-  <script src="app/authorization/login/loginModal.controller.js"></script>
   <script src="app/bookDisplay/sorting/bsSortOptions.js"></script>
   <script src="app/bookDisplay/sorting/sortOptions.controller.js"></script>
+
+  <!-- Components -->
   <script src="app/components/monthly-books/bsMonthlyBooks.js"></script>
   <script src="app/components/total-books/bsTotalBooks.js"></script>
   <script src="app/components/num-users/bsNumUsers.js"></script>
   <script src="app/components/components.controller.js"></script>
+
+  <!-- Group -->
   <script src="app/group/group.controller.js"></script>
   <script src="app/group/bsGroup.js"></script>
+
+  <!-- Chat -->
+  <script src="app/chat/chat.controller.js"></script>
+  <script src="app/chat/bsChat.js"></script>
+
+  <!-- Services -->
   <script src="app/common/services/data.service.js"></script>
-  <script src="app/common/services/authentication.service.js"></script>
   <script src="app/common/services/authentication.service.js"></script>
 
 </body>
