--- a/public/app/chat/bsChat.html
+++ b/public/app/chat/bsChat.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="../style/chat.style.css" type="text/css">
+<link rel="stylesheet" href="../style/main.css" type="text/css">
+
 <div class="chat-container">
   <ul id="messages"></ul>
   <form action="">
@@ -8,6 +11,7 @@
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 <script>
+  console.log('hi');
   var socket = io();
   $('form').submit(function(){
     socket.emit('chat message', $('#m').val());
