--- a/public/app/chat/bsChat.html
+++ b/public/app/chat/bsChat.html
@@ -1,27 +1,27 @@
-<link rel="stylesheet" href="../style/chat.style.css" type="text/css">
-<link rel="stylesheet" href="../style/main.css" type="text/css">
+<!--<link rel="stylesheet" href="../style/chat.style.css" type="text/css">-->
+<!--<link rel="stylesheet" href="../style/main.css" type="text/css">-->
 
 <div class="chat-container">
   <ul id="messages"></ul>
-  <form action="">
+  <form action="" >
     <input id="m" autocomplete="off" /><button>Send</button>
   </form>
 </div>
 
-<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-<script>
-  console.log('hi');
-  var socket = io();
-  $('form').submit(function(){
-    socket.emit('chat message', $('#m').val());
-    $('#m').val('');
-    return false;
-  });
-  socket.on('chat message', function(msg){
-    $('#messages').append($('<li>').text(msg));
-  });
-</script>
+<!--<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>-->
+<!--<script src="http://code.jquery.com/jquery-1.11.1.js"></script>-->
+<!--<script>-->
+  <!--console.log('hi');-->
+  <!--var socket = io();-->
+  <!--$('form').submit(function(){-->
+    <!--socket.emit('chat message', $('#m').val());-->
+    <!--$('#m').val('');-->
+    <!--return false;-->
+  <!--});-->
+  <!--socket.on('chat message', function(msg){-->
+    <!--$('#messages').append($('<li>').text(msg));-->
+  <!--});-->
+<!--</script>-->
 
 
 
