--- a/public/index.html
+++ b/public/index.html
@@ -70,5 +70,10 @@
   <script src="app/common/services/data.service.js"></script>
   <script src="app/common/services/authentication.service.js"></script>
 
+  <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+
+
+
 </body>
 </html>
