--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@
   <!-- Chat -->
   <script src="app/chat/chat.controller.js"></script>
   <script src="app/chat/bsChat.js"></script>
+  <script src="app/chat/bsMessage.js"></script>
 
   <!-- Services -->
   <script src="app/common/services/data.service.js"></script>
