--- a/public/app/chat/bsMessage.html
+++ b/public/app/chat/bsMessage.html
@@ -1,5 +1,7 @@
   <div class="message">
     <p class="chat-username">{{message.userName}}: </p>
-    <p class="chat-message">{{message.chatMessage}}</p>
+    <!--<p class="chat-message">{{message.chatMessage}}</p>-->
+    <!--<p class="chat-message">{{chatMessage}}</p>-->
+    <p class="chat-message">{{chatMessage}}</p>
     <p class="chat-message-time">{{message.time}}</p>
   </div>
